# py-event-drive-system

./: .coveragerc  .env.example  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
app/: __init__.py
app/application/: dtos.py  errors.py  ports.py
app/application/use_cases/: process_event.py  process_item_from_queue.py
app/config/: settings.py
app/domain/: entities.py  errors.py
app/infrastructure/: providers.py
app/infrastructure/logging/: logger.py
app/infrastructure/messaging/: factory.py  in_memory_bus.py  rabbitmq_bus.py  sqs_bus.py
app/infrastructure/persistence/: db.py  models.py  repository.py
app/interfaces/: __init__.py
app/interfaces/http/: main.py  routers.py
app/interfaces/lambda/: handler.py
app/interfaces/worker/: main.py
docker/: Dockerfile  docker-compose.yml
docs/: OVERVIEW.md
docs/prompts/: domain.md  external_api.md  infra.md  interfaces.md  messaging.md  persistence.md  repository.md  use_case.md  validation.md
tests/integration/: __init__.py
tests/integration/infrastructure/: test_external_api.py  test_messagebus_rabbitmq.py  test_repository.py
tests/integration/interfaces/: test_http_routes.py
tests/unit/application/: test_in_memory_bus.py  test_logger.py  test_settings.py  test_use_cases.py
tests/unit/domain/: test_entities.py
