[project]
name = "dev-event-driven-system"
version = "0.1.0"
description = "Microserviço orientado a eventos, arquitetura hexagonal, Python 3.12"
authors = [{ name = "Seu Nome", email = "seu@email.com" }]
requires-python = ">=3.12"
dependencies = [
	"fastapi>=0.111.0",
	"uvicorn[standard]>=0.30.1",
	"pydantic>=2.7.1",
	"pydantic-settings>=2.2.1",
	"httpx>=0.27.0",
	"structlog>=24.1.0",
	"sqlalchemy[asyncio]>=2.0.30",
	"asyncpg>=0.29.0",
	"python-dotenv>=1.0.1",
	"aioboto3>=12.0.0",
	"aio-pika>=9.4.0",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.2.2",
	"pytest-asyncio>=0.23.7",
	"coverage>=7.5.3",
	"ruff>=0.4.7",
	"mypy>=1.10.0",
    "aiosqlite>=0.21.0",
	"types-requests>=2.31.0.20240406",
	"awslambdaric>=2.0.0"
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "B", "UP", "C90"]
ignore = ["E501"]
